work on adding a client side debug renderer